Add class current for highlight
add class current to each link page with added highlight colour

--- a/red-currants.html
+++ b/red-currants.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
   <title>Red Currants • Berries</title>
 </head>
 
@@ -15,7 +16,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
-        <li><a href="red-currants.html">Red Currants</a></li>
+        <li><a class="current" href="red-currants.html">Red Currants</a></li>
       </ul>
     </nav>
   </header>
