--- a/blueberries.html
+++ b/blueberries.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
   <title>Blueberries • Berries</title>
 </head>
 
@@ -13,7 +14,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a class="current" href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
         <li><a href="red-currants.html">Red Currants</a></li>
       </ul>
