--- a/grapes.html
+++ b/grapes.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Berries</title>
+  <link href="css/main.css" rel="stylesheet">
+  <title>Grapes • Berries</title>
 </head>
 
 <body>
@@ -12,10 +13,10 @@
     <h1>BERRIES</h1>
     <nav>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Blueberries</a></li>
-        <li><a href="#">Grapes</a></li>
-        <li><a href="#">Red Currants</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="blueberries.html">Blueberries</a></li>
+        <li><a class="current" href="grapes.html">Grapes</a></li>
+        <li><a href="red-currants.html">Red Currants</a></li>
       </ul>
     </nav>
   </header>
