Add colours and font sizes to css
in main.css, add color, background color and font sizes

--- a/red-currants.html
+++ b/red-currants.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="utf-8">
+  <title>Red Currants • Berries</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
-  <title>Red Currants • Berries</title>
+  <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
