Fix all margins and paddings

--- a/blueberries.html
+++ b/blueberries.html
@@ -6,14 +6,17 @@
   <title>Blueberries • Berries</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="grapes.html" rel="stylesheet">
+  <link href="index.html" rel="stylesheet">
+  <link href="red-currants.html" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <h1>BERRIES</h1>
+    <h1>Berries</h1>
     <nav>
-      <ul>
+      <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a class="current" href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
@@ -23,7 +26,7 @@
   </header>
 
   <main>
-    <h2>BLUEBERRIES</h2>
+    <h2>Blueberries</h2>
     <img src="images/blueberries.jpg" alt="blueberries">
     <p>Blueberries are perennial flowering plants with indigo-colored berries. Most common fruits sold as “blueberries” and are native to North America.</p>
   </main>
