--- a/grapes.html
+++ b/grapes.html
@@ -6,14 +6,17 @@
   <title>Grapes • Berries</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="index.html" rel="stylesheet">
+  <link href="blueberries.html" rel="stylesheet">
+  <link href="red-currants.html" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <h1>BERRIES</h1>
+    <h1>Berries</h1>
     <nav>
-      <ul>
+      <ul class="nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="blueberries.html">Blueberries</a></li>
         <li><a class="current" href="grapes.html">Grapes</a></li>
@@ -23,7 +26,7 @@
   </header>
 
   <main>
-    <h2>GRAPES</h2>
+    <h2>Grapes</h2>
     <img src="images/grapes.jpg" alt="grapes">
     <p>Grapes can be eaten raw or they can be used for making wine, jam, juice, jelly, grape seed extract, raisins, vinegar, and grape seed oil.</p>
   </main>
