--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
   <title>Berries</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="css/main.css" rel="stylesheet">
+  <link href="grapes.html" rel="stylesheet">
+  <link href="blueberries.html" rel="stylesheet">
+  <link href="red-currants.html" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Sigmar+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
-    <h1>BERRIES</h1>
+    <h1>Berries</h1>
     <nav>
-      <ul>
+      <ul class="nav">
         <li><a class="current" href="index.html">Home</a></li>
         <li><a href="blueberries.html">Blueberries</a></li>
         <li><a href="grapes.html">Grapes</a></li>
@@ -24,7 +27,7 @@
 
   <main>
     <h2>Berries, berries, oh my!</h2>
-    <p>In everyday English, “berry” is a term for any <b>small edible fruit</b>. These “berries” are usually <b>juicy, round, brightly coloured</b>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
+    <p>In everyday English, “berry” is a term for any <strong>small edible fruit</strong>. These “berries” are usually <strong>juicy, round, brightly coloured</strong>, sweet or sour, and do not have a stone or pit, although many seeds may be present.</p>
   </main>
   <footer>
     <small>© Berries.</small>
